--- a/style.css
+++ b/style.css
@@ -14,16 +14,14 @@
     grid-template-columns: repeat(1, 440px);
     grid-template-rows: repeat(1, 75px);
     justify-content: center;
-    
     font-size: 30px;
     text-align: end;
     padding-top: 25px;
     font-family: 'Geneva';
-    
     border-bottom: 1px solid black;
-    
-    
-    
+    background-color: aliceblue;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
 }
 #calculator {
     display: grid;
@@ -32,7 +30,7 @@
     grid-row-gap: 10px;
     grid-column-gap: 10px;
     justify-content: center;
-    background-color: lightgray;
+    background-color: lightgrey;
     height: 485px;
     padding-top: 10px;
     border-bottom-right-radius: 5%;
@@ -65,4 +63,7 @@ input[name='equal'] {
     font-size: 25px;
     font-family: 'Geneva';
     border-radius: 15px;
+}
+body {
+    background-color: whitesmoke;
 }
